--- a/bin/TestingDatabase/Testing.fxml
+++ b/bin/TestingDatabase/Testing.fxml
@@ -1,7 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
-	
+
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.BorderPane?>
-	
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="TestingDatabase.TestingController">
-	<!-- TODO Add Nodes -->
+<?import javafx.scene.text.Font?>
+
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="TestingDatabase.TestingController">
+   <left>
+      <TextField fx:id="fieldId" prefHeight="263.0" prefWidth="249.0" promptText="Find out bycilcking the button" BorderPane.alignment="CENTER" />
+   </left>
+   <center>
+      <Button fx:id="buttonId" mnemonicParsing="false" onAction="#submitName" prefHeight="74.0" prefWidth="163.0" text="Results" BorderPane.alignment="CENTER">
+         <font>
+            <Font size="32.0" />
+         </font>
+      </Button>
+   </center>
+   <top>
+      <TitledPane fx:id="titleId" animated="false" text="Is the Db Connecting?" textAlignment="CENTER" BorderPane.alignment="CENTER">
+         <font>
+            <Font size="34.0" />
+         </font>
+      </TitledPane>
+   </top>
 </BorderPane>
